<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.mainActivityFragments.ProgramsFragment">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/you_re_all_set"
            android:layout_marginTop="15dp"
            android:drawablePadding="10dp"
            app:drawableTopCompat="@drawable/ic_sun_umbrella_svgrepo_com" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:textColor="#5a5a5a"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/progr"/>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BFBFBF"
            android:layout_margin="15dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:backgroundTint="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/how_programs_work"
                    android:padding="5dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#5a5a5a"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:text="@string/how_work"/>
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:lottie_fileName="relax.json"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    android:contentDescription="@string/this_is_image_of_my_program" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_about_programs"
                    android:textAllCaps="false"
                    android:id="@+id/btnLearnMore"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rcLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/paragraph"
            android:text="Available"
            android:textAllCaps="true"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcPrograms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/progressBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
      <com.airbnb.lottie.LottieAnimationView
          android:layout_width="120dp"
          android:layout_height="120dp"
          app:lottie_autoPlay="true"
          app:lottie_loop="true"
          app:lottie_fileName="loading.json"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>