<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.loginActivityFragment.LoginFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:minHeight="?attr/actionBarSize"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/txtL"
            style="@style/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtL"
            android:layout_marginStart="10dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/phone_or_email"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            android:textColorHint="#595960"
            android:textSize="20sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPhone"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#595960"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            style="@style/paragraph"
            android:layout_marginTop="1dp"
            android:padding="10dp"
            android:layout_marginBottom="0dp"
            android:layout_below="@id/edTxtPassword"
            android:textColor="#FF0000"
            android:textSize="16sp"
            android:visibility="gone"
            android:id="@+id/txtForgot"/>

        <Button
            android:id="@+id/btnLogin"
            style="@style/ActiveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtForgot"
            android:text="@string/log_in"/>


        <LinearLayout
            android:id="@+id/layoutView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="55dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#5A5A5A" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="#5A5A5A"
                android:textStyle="bold" />

            <View
                android:id="@+id/view2"
                android:layout_width="55dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#5A5A5A" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnFBCo"
            style="@style/Header"
            android:drawableStart="@drawable/ic_google"
            android:layout_width="wrap_content"
            android:background="#EAEAEA"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_centerHorizontal="true"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutView"
            android:text="@string/with_google" />


        <TextView
            android:id="@+id/txtDataPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/paragraph"
            android:layout_marginBottom="10dp"
            android:text="@string/review_our_data_policy"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_fileName="loading.json"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>