<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.loginActivityFragment.EmailLoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/txtL"
            style="@style/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_more" />


        <EditText
            android:id="@+id/eTxtName"
            style="@style/Input"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtL"
            android:layout_marginTop="75dp"
            android:hint="@string/full_name" />

        <EditText
            android:id="@+id/eTxtCountyName"
            style="@style/Input"
            android:text="India"
            android:inputType="textPostalAddress"
            android:layout_width="match_parent"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eTxtName"
            android:hint="@string/country_name" />

        <LinearLayout
            android:id="@+id/etxtGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@+id/eTxtCountyName" >

            <RadioGroup
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="match_parent" >
                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="Male"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:layout_weight="1"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other"
                    android:layout_weight="1"
                    android:textSize="24sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxtGender"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/eTxtDate"
                style="@style/Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="Birth of date: dd - mm - yyyy"
                android:inputType="date" />

            <ImageView
                android:id="@+id/imgClander"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_clander"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnAddNext"
            style="@style/ActiveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_alignParentBottom="true"
            android:text="Next" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_fileName="loading.json"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>